--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Kate Manson : <%= @page_title %></title>
-    <%= javascript_include_tag 'jquery-1.2.6.min' %>
+    <script src="http://www.google.com/jsapi"></script>
+    <script>google.load("jquery", "1.2.6")</script>
     <%= stylesheet_link_tag 'default' %>
     <%= yield :head %>
   </head>
