Use minified instead of packed JQuery Lightbox file

--- a/app/views/content/gallery.html.erb
+++ b/app/views/content/gallery.html.erb
@@ -1,5 +1,5 @@
 <% content_for :head do %>
-  <%= javascript_include_tag 'jquery.lightbox.packed', 'lightbox-setup' %>
+  <%= javascript_include_tag 'jquery.lightbox.min', 'lightbox-setup' %>
   <%= stylesheet_link_tag 'jquery.lightbox.packed' %>
 <% end %>
 
