--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Kate Manson : <%= @page_title %></title>
     <script src="http://www.google.com/jsapi"></script>
     <script>google.load("jquery", "1.3.2")</script>
+    <%= javascript_include_tag 'menu' %>
     <%= stylesheet_link_tag 'default' %>
     <%= yield :head %>
   </head>
