--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,11 +3,13 @@
 <table>
   <tr>
     <th>Name</th>
+    <th>Cartoons</th>
   </tr>
 
 <% @categories.each do |category| %>
   <tr>
     <td><%=h category.name %></td>
+    <td><%=h category.cartoons.length %></td>
     <td><%= link_to 'Show', category %></td>
     <td><%= link_to 'Edit', edit_category_path(category) %></td>
     <td><%= link_to 'Destroy', category, :confirm => 'Are you sure?', :method => :delete %></td>
