--- a/app/views/cartoons/edit.html.erb
+++ b/app/views/cartoons/edit.html.erb
@@ -13,7 +13,7 @@
   </p>
   <p>
     <%= f.label :artwork %><br />
-    <%= image_tag @cartoon.artwork.url(:gallery) %>
+    <%= image_tag @cartoon.artwork.url(:gallery) %><br />
     <%= f.file_field :artwork %>
   </p>
   <p>
