--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,11 +8,12 @@
 
 <% @categories.each do |category| %>
   <tr>
-    <td><%=h category.name %></td>
+    <td><%= link_to category.name, category %></td>
     <td><%=h category.cartoons.length %></td>
-    <td><%= link_to 'Show', category %></td>
     <td><%= link_to 'Edit', edit_category_path(category) %></td>
-    <td><%= link_to 'Destroy', category, :confirm => 'Are you sure?', :method => :delete %></td>
+    <% if category.cartoons.empty? %>
+      <td><%= link_to 'Delete', category, :confirm => 'Are you sure?', :method => :delete %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
