Rename 'gallery' size to 'medium'

--- a/app/views/cartoons/show.html.erb
+++ b/app/views/cartoons/show.html.erb
@@ -10,7 +10,7 @@
 
 <p>
   <b>Artwork:</b>
-  <%= image_tag @cartoon.artwork.url(:gallery) %>
+  <%= image_tag @cartoon.artwork.url(:medium) %>
 </p>
 
 <%= link_to 'Edit', edit_cartoon_path(@cartoon) %> |
