Add notices and edit link to gallery if logged in

--- a/app/views/content/gallery.html.erb
+++ b/app/views/content/gallery.html.erb
@@ -12,6 +12,10 @@
   </script>
 <% end %>
 
+<% if admin? %>
+  <div align="right"><%= link_to 'Edit', cartoons_path %></div>
+<% end %>
+
 <p>click on the thumbnails to enlarge</p>
 
 <% Category.find(:all).each do |category| %>
