--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,16 +5,10 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= controller.class.name %>: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'admin' %>
+  <%= javascript_include_tag :defaults %>
+  <%= active_scaffold_includes %>
 </head>
 <body>
-
-<% if flash[:notice] %>
-  <p style="color: green"><%= flash[:notice] %></p>
-<% end %>
-<% if flash[:warning] %>
-  <p style="color: red"><%= flash[:warning] %></p>
-<% end %>
 
 <%= yield %>
 
