--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -2,6 +2,7 @@
 <p>I'm Kate Manson, a freelance cartoonist living in London.</p>
 <p>You can <a href="/gallery">browse my work</a>,
   ask about <a href="/contact">commissioning</a> an original cartoon,
+  <a href="/gallery">send an e-card</a>,
   <a href="/contact">contact me</a> with your ideas,
   or find out what I'm doing via my <a href="/blog">blog</a>.
 </p>
