--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -46,6 +46,21 @@ textarea {
     width: 90px;
 }
 
+.ecard .submit {
+    margin: 0 auto;
+    width : 100%;
+}
+
+.ecard fieldset {
+  margin: 0px 0px 20px;
+}
+
+.ecard img {
+  display: block;
+  margin: auto;
+  border: 1px solid #999999;
+}
+
 div.image {
   float: left;
   border: 1px solid #999999;
