--- a/app/views/notifier/card.html.erb
+++ b/app/views/notifier/card.html.erb
@@ -2,13 +2,15 @@
 
 <div style="margin-top: 1em"><%=@sender_name%> has sent you an e-card from <b><a href="http://www.katemanson.co.uk/">www.katemanson.co.uk</a></b></div>
 
-<%
-  artwork= Cartoon.find(@cartoon_id).artwork
-  geometry = Paperclip::Geometry.from_file(artwork.path)
-%>
+<hr />
 
-<div><img src="http://www.katemanson.co.uk<%= artwork.url(:medium) %>" alt="Please enable images to see the cartoon"
-  width=<%= geometry.width.to_i %> height=<%= geometry.width.to_i %>/>.</div>
+<div><img style="display: block; margin: auto" src="http://www.katemanson.co.uk<%= @cartoon.artwork.url(:medium) %>" alt="Please enable images to see the cartoon"
+  width=<%= @geometry.width.to_i %> height=<%= @geometry.width.to_i %>/>.</div>
+<% unless @cartoon.caption.blank? %>
+  <div style="margin-bottom: 1em; font-size: 0.8em; text-align:center"><%= @cartoon.caption %></div>
+<% end %>
+
+<hr />
 
 <% @message.each_line do |line| %>
   <div><%=line.strip.chomp('\n')%></div>
